static/custom.css
#home-background{
    /* background: url('images/colourfulbackground.png') no-repeat center center fixed; */
    /* background-color: #e5e5e5; */
    /* background-color:#00b4d8; */
    background-color: #0077b6;
    -webkit-background-size: cover;
    -moz-background-size:cover;
    background-size: cover;
    -o-background-size:cover;
    font-family: "JetBrains Mono";
}

#homecardholder{
    display: flex;
    overflow:auto;
    justify-content: center;
    align-items: center;
    white-space: nowrap;
    overflow: hidden;
    font-family: "JetBrains Mono";
}

#homecard{
  background-color: #caf0f8;
  
    max-width: 50rem;
    padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 0px;
    border-radius: 20px;
}
#signupcard{
    max-width: 100rem;
    padding-top: 10px;
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 0px;
    border-radius: 30px;
}
#bcNavbar{
  font-family: "JetBrains Mono", monospace;
  font-size: medium;
  font-weight: normal;

  font-display: block;
  border-radius: 0%;
}
#navbarFont{
  font-family: "JetBrains Mono", monospace;
  font-size: large;
  /* margin-top: 15px; */
}
.successbutton {
    transition-duration: 0.4s;
    font-family: "JetBrains Mono", monospace;
  }
  
  .successbutton:hover {
    background-color: #4CAF50; 
    color: white;
  }
  .column {
    float: left;
    width: 50%;
  }
  
  /* Clear floats after the columns */
  .row:after {
    content: "";
    display: table;
    clear: both;
  }
  
  #secondColumn{
    transform: translateY(25%);
  }
  
  /* 
  CSS from https://getcssscan.com/css-buttons-examples
  and Algolia
  */
  .EntryButton {
    align-items: center;
    appearance: none;
    background-color: #FCFCFD;
    border-radius: 4px;
    border-width: 0;
    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
    box-sizing: border-box;
    color: #36395A;
    cursor: pointer;
    display: inline-flex;
    font-family: "JetBrains Mono",monospace;
    height: 48px;
    justify-content: center;
    line-height: 1;
    list-style: none;
    overflow: hidden;
    padding-left: 16px;
    padding-right: 16px;
    position: relative;
    text-align: left;
    text-decoration: none;
    transition: box-shadow .15s,transform .15s;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    white-space: nowrap;
    will-change: box-shadow,transform;
    font-size: 18px;
  }
  
  .EntryButton:focus {
    box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
  }
  
  .EntryButton:hover {
    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
    transform: translateY(-2px);
  }
  
  .EntryButton:active {
    box-shadow: #D6D6E7 0 3px 7px inset;
    transform: translateY(2px);
  }

.btn {

    width: calc(50% - 10px);
    /* padding-top: 10px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 0px; */
    margin: 0 auto;
    display: block;

  }




.divider{
    width:5px;
    height:15px;
    display:inline-block;
}

